Bug 153353 - When switching between freedesktop light and dark mode, Calc's formula bar text entry has leftover colors from the previous theme
Summary: When switching between freedesktop light and dark mode, Calc's formula bar te...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.5.0.3 release
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.6.0 target:7.5.1
Keywords:
Depends on:
Blocks: Linux-Dark-Mode
  Show dependency treegraph
 
Reported: 2023-02-03 15:09 UTC by Jeff F.
Modified: 2023-02-04 08:22 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screenshot: result when going from light to dark mode (48.10 KB, image/png)
2023-02-03 15:11 UTC, Jeff F.
Details
Screenshot: result when going from dark to light mode (61.87 KB, image/png)
2023-02-03 15:12 UTC, Jeff F.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeff F. 2023-02-03 15:09:00 UTC
Description:
See attached screenshots.

Steps to Reproduce:
1. Open Calc 7.5 on Linux
2. With GNOME 43 or elementary 6+ (or other environments allowing you to switch the global freedesktop dark/light mode preference), switch from/to dark

Actual Results:
The styling of the formula entry bar retains some of the previous theming colors and sticks out like a sore thumb, even in "Standard" toolbar mode.

Expected Results:
Look well integrated no matter the circumstances.


Reproducible: Always


User Profile Reset: No

Additional Info:
Other toolbar modes have various issues documented in bug #127583
Comment 1 Jeff F. 2023-02-03 15:11:58 UTC
Created attachment 185085 [details]
Screenshot: result when going from light to dark mode
Comment 2 Jeff F. 2023-02-03 15:12:19 UTC
Created attachment 185086 [details]
Screenshot: result when going from dark to light mode
Comment 3 Caolán McNamara 2023-02-03 16:20:31 UTC
https://gerrit.libreoffice.org/c/core/+/146545 to handle that
Comment 4 Commit Notification 2023-02-04 07:39:10 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/462bbf692e41897552b4f4e1f9e4f033e5f76643

Resolves: tdf#153353 formula bar border area bg didn't change on theme change

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2023-02-04 07:39:33 UTC
done in trunk, backport to 7-5 in gerrit
Comment 6 Commit Notification 2023-02-04 08:22:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ff14364441c3f7bc0c3bc4981c9395658f9079f3

Resolves: tdf#153353 formula bar border area bg didn't change on theme change

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.