Resolves: tdf#153353 formula bar border area bg didn't change on theme change

Change-Id: I720054d540a6352b8248aa59e231878c1832d998
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/146545
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>